--- a/package.json
+++ b/package.json
@@ -4,17 +4,39 @@
   "description": "Small React library for CSS spinners",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "react-scripts test --env=jsdom",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "eject": "react-scripts eject",
+    "lint":  "prettier-eslint --write $PWD/'src/**/*.[jt]s?(x)' && eslint",
+    "lint:fix": "prettier-eslint --write $PWD/'src/**/*.[jt]s?(x)' && eslint --fix ."
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Chagchen/react-css-demo-spinners.git"
   },
-  "keywords": ["react", "css", "spinners"],
+  "keywords": [
+    "react",
+    "css",
+    "spinners"
+  ],
   "author": "Bogie",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Chagchen/react-css-demo-spinners/issues"
   },
-  "homepage": "https://github.com/Chagchen/react-css-demo-spinners#readme"
+  "homepage": "https://github.com/Chagchen/react-css-demo-spinners#readme",
+  "devDependencies": {
+    "eslint": "^7.0.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-standard": "^4.0.1",
+    "prettier-eslint": "^9.0.1",
+    "prettier-eslint-cli": "^5.0.0"
+  },
+  "dependencies": {}
 }
