--- a/package.json
+++ b/package.json
@@ -8,8 +8,16 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "lint":  "prettier-eslint --write $PWD/'src/**/*.[jt]s?(x)' && eslint",
+    "lint": "prettier-eslint --write $PWD/'src/**/*.[jt]s?(x)' && eslint",
     "lint:fix": "prettier-eslint --write $PWD/'src/**/*.[jt]s?(x)' && eslint --fix ."
+  },
+  "husky": {
+    "hooks":{
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": ["npm run lint:fix", "git add"]
   },
   "repository": {
     "type": "git",
@@ -35,6 +43,8 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-standard": "^4.0.1",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.2",
     "prettier-eslint": "^9.0.1",
     "prettier-eslint-cli": "^5.0.0"
   },
