--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     }
   },
   "lint-staged": {
-    "*.js": ["npm run lint:fix", "git add"]
+    "$PWD/'src/**/*.[jt]s?(x)'": ["npm run lint:fix", "git add"]
   },
   "repository": {
     "type": "git",
