--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "lint": "prettier-eslint --write $PWD/'src/**/*.[jt]s?(x)' && eslint",
+    "lint": "prettier-eslint --write $PWD/'src/**/*.[jt]s?(x)' && eslint .",
     "lint:fix": "prettier-eslint --write $PWD/'src/**/*.[jt]s?(x)' && eslint --fix ."
   },
   "husky": {
