--- a/package.json
+++ b/package.json
@@ -58,7 +58,14 @@
     "rollup": "^2.9.1",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-string": "^3.0.0",
     "rollup-plugin-terser": "^5.3.0"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "peerDependencies": {
+    "react": ">= 16.2"
+  },
+  "engines": {
+    "node": ">=11"
+  }
 }
