edited index.js and updated ssr package.json

--- a/examples/ssr/package.json
+++ b/examples/ssr/package.json
@@ -6,8 +6,9 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "react": "^16.13.1",
-    "react-css-demo-spinners": "file:../.."
+    "express": "latest",
+    "react": "latest",
+    "react-css-demo-spinners": "file:../..",
+    "react-dom": "latest"
   }
 }
